--- a/apps/capital/project.json
+++ b/apps/capital/project.json
@@ -4,7 +4,7 @@
   "projectType": "application",
   "prefix": "capital",
   "sourceRoot": "apps/capital/src",
-  "tags": [],
+  "tags": ["type:app", "scope:capital"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
@@ -16,7 +16,11 @@
         "polyfills": ["zone.js"],
         "tsConfig": "apps/capital/tsconfig.app.json",
         "assets": ["apps/capital/src/favicon.ico", "apps/capital/src/assets"],
-        "styles": ["apps/capital/src/styles.scss"],
+        "styles": [
+          "@angular/material/prebuilt-themes/indigo-pink.css",
+          "libs/shared/styles/src/index.scss",
+          "apps/capital/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -91,5 +95,6 @@
         "buildTarget": "capital:build"
       }
     }
-  }
+  },
+  "implicitDependencies": ["shared-styles"]
 }
