--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.0.0",
+    "@angular/cdk": "^16.1.1",
     "@angular/common": "~16.0.0",
     "@angular/compiler": "~16.0.0",
     "@angular/core": "~16.0.0",
     "@angular/forms": "~16.0.0",
+    "@angular/material": "^16.1.1",
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@ngrx/component-store": "~16.0.0",
+    "@ngrx/effects": "~16.0.0",
+    "@ngrx/entity": "~16.0.0",
+    "@ngrx/router-store": "~16.0.0",
+    "@ngrx/store": "~16.0.0",
     "@nx/angular": "16.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +39,8 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "~16.0.0",
     "@angular/language-service": "~16.0.0",
+    "@ngrx/schematics": "~16.0.0",
+    "@ngrx/store-devtools": "~16.0.0",
     "@nx/cypress": "16.3.2",
     "@nx/eslint-plugin": "16.3.2",
     "@nx/jest": "16.3.2",
@@ -48,6 +57,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
