--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@capital/shared/records": ["libs/shared/records/src/index.ts"],
+      "@capital/shared/styles": ["libs/shared/styles/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
