Move record-list table to separate lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,6 +30,9 @@
       "@capital/record-list/record-list-page": [
         "libs/record-list/record-list-page/src/index.ts"
       ],
+      "@capital/record-list/table-records": [
+        "libs/record-list/table-records/src/index.ts"
+      ],
       "@capital/shared/records": ["libs/shared/records/src/index.ts"],
       "@capital/shared/styles": ["libs/shared/styles/src/index.ts"]
     }
