Move records service to own lib; Update table onChanges response

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,6 +33,9 @@
       "@capital/record-list/table-records": [
         "libs/record-list/table-records/src/index.ts"
       ],
+      "@capital/services/records-service": [
+        "libs/services/records-service/src/index.ts"
+      ],
       "@capital/shared/records": ["libs/shared/records/src/index.ts"],
       "@capital/shared/styles": ["libs/shared/styles/src/index.ts"]
     }
