--- a/apps/capital/project.json
+++ b/apps/capital/project.json
@@ -60,7 +60,10 @@
           "browserTarget": "capital:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/capital/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
