--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@ngrx/router-store": "~16.0.0",
     "@ngrx/store": "~16.0.0",
     "@nx/angular": "16.3.2",
+    "axios": "^1.0.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -43,14 +47,19 @@
     "@ngrx/store-devtools": "~16.0.0",
     "@nx/cypress": "16.3.2",
     "@nx/eslint-plugin": "16.3.2",
-    "@nx/jest": "16.3.2",
-    "@nx/js": "16.3.2",
+    "@nx/express": "^16.4.0",
+    "@nx/jest": "16.4.0",
+    "@nx/js": "16.4.0",
     "@nx/linter": "16.3.2",
+    "@nx/node": "16.4.0",
     "@nx/web": "16.3.2",
+    "@nx/webpack": "16.4.0",
     "@nx/workspace": "16.3.2",
     "@schematics/angular": "~16.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "cypress": "^12.11.0",
@@ -60,6 +69,7 @@
     "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
     "nx": "16.3.2",
     "nx-cloud": "latest",
