--- a/libs/login/login-form/project.json
+++ b/libs/login/login-form/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/login/login-form/src",
   "prefix": "capital",
-  "tags": [],
+  "tags": ["scope:login", "type:feature"],
   "projectType": "library",
   "targets": {
     "test": {
