--- a/libs/shared/footer/tsconfig.lib.json
+++ b/libs/shared/footer/tsconfig.lib.json
@@ -7,6 +7,11 @@
     "inlineSources": true,
     "types": []
   },
-  "exclude": ["src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts"],
+  "exclude": [
+    "src/**/*.spec.ts",
+    "src/test-setup.ts",
+    "jest.config.ts",
+    "src/**/*.test.ts"
+  ],
   "include": ["src/**/*.ts"]
 }
