--- a/libs/shared/styles/project.json
+++ b/libs/shared/styles/project.json
@@ -5,16 +5,5 @@
   "prefix": "capital",
   "tags": ["scope:shared", "type:styles"],
   "projectType": "library",
-  "targets": {
-    "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "libs/shared/styles/**/*.ts",
-          "libs/shared/styles/**/*.html"
-        ]
-      }
-    }
-  }
+  "targets": {}
 }
