--- a/apps/capital/project.json
+++ b/apps/capital/project.json
@@ -4,7 +4,7 @@
   "projectType": "application",
   "prefix": "capital",
   "sourceRoot": "apps/capital/src",
-  "tags": ["type:app", "scope:capital"],
+  "tags": ["scope:capital", "type:app"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
@@ -18,10 +18,12 @@
         "assets": ["apps/capital/src/favicon.ico", "apps/capital/src/assets"],
         "styles": [
           "@angular/material/prebuilt-themes/indigo-pink.css",
-          "libs/shared/styles/src/index.scss",
           "apps/capital/src/styles.scss"
         ],
-        "scripts": []
+        "scripts": [],
+        "stylePreprocessorOptions": {
+          "includePaths": ["libs/shared/styles/src"]
+        }
       },
       "configurations": {
         "production": {
