--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/router-store": "~16.0.0",
     "@ngrx/store": "~16.0.0",
     "@nx/angular": "16.3.2",
+    "angular-in-memory-web-api": "^0.16.0",
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.1",
