--- a/apps/capital-api-auth/project.json
+++ b/apps/capital-api-auth/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "capital-api",
+  "name": "capital-api-auth",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "apps/capital-api/src",
-  "tags": ["scope:capital-api", "type:app"],
+  "sourceRoot": "apps/capital-api-auth/src",
+  "tags": ["scope:capital-api-auth", "type:app"],
   "targets": {
     "build": {
       "executor": "@nx/webpack:webpack",
@@ -12,12 +12,12 @@
       "options": {
         "target": "node",
         "compiler": "tsc",
-        "outputPath": "dist/apps/capital-api",
-        "main": "apps/capital-api/src/main.ts",
-        "tsConfig": "apps/capital-api/tsconfig.app.json",
-        "assets": ["apps/capital-api/src/assets"],
+        "outputPath": "dist/apps/capital-api-auth",
+        "main": "apps/capital-api-auth/src/main.ts",
+        "tsConfig": "apps/capital-api-auth/tsconfig.app.json",
+        "assets": ["apps/capital-api-auth/src/assets"],
         "isolatedConfig": true,
-        "webpackConfig": "apps/capital-api/webpack.config.js"
+        "webpackConfig": "apps/capital-api-auth/webpack.config.js"
       },
       "configurations": {
         "development": {},
@@ -28,14 +28,14 @@
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "capital-api:build"
+        "buildTarget": "capital-api-auth:build"
       },
       "configurations": {
         "development": {
-          "buildTarget": "capital-api:build:development"
+          "buildTarget": "capital-api-auth:build:development"
         },
         "production": {
-          "buildTarget": "capital-api:build:production"
+          "buildTarget": "capital-api-auth:build:production"
         }
       }
     },
@@ -43,14 +43,14 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/capital-api/**/*.ts"]
+        "lintFilePatterns": ["apps/capital-api-auth/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/capital-api/jest.config.ts",
+        "jestConfig": "apps/capital-api-auth/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
