--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,9 @@
       "@capital/record-list/dialog-view-record": [
         "libs/record-list/dialog-view-record/src/index.ts"
       ],
+      "@capital/record-list/input-phone": [
+        "libs/record-list/input-phone/src/index.ts"
+      ],
       "@capital/record-list/record-list-page": [
         "libs/record-list/record-list-page/src/index.ts"
       ],
