Update to Nx 17; Update to Angular 17

--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,11 @@ testem.log
 .DS_Store
 Thumbs.db
 
-#Angular cache
+# Angular cache
 .angular
 
-#WSL
+# WSL
 *.Identifier
+
+# Nx Cache
+.nx/cache
