--- a/apps/capital/project.json
+++ b/apps/capital/project.json
@@ -56,10 +56,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "capital:build:production"
+          "buildTarget": "capital:build:production"
         },
         "development": {
-          "browserTarget": "capital:build:development"
+          "buildTarget": "capital:build:development"
         }
       },
       "defaultConfiguration": "development",
@@ -70,28 +70,18 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "capital:build"
+        "buildTarget": "capital:build"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/capital/**/*.ts", "apps/capital/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/capital/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "apps/capital/jest.config.ts"
       }
     },
     "serve-static": {
