--- a/apps/capital-api-auth-e2e/project.json
+++ b/apps/capital-api-auth-e2e/project.json
@@ -9,16 +9,12 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
-        "jestConfig": "apps/capital-api-auth-e2e/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "apps/capital-api-auth-e2e/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/capital-api-auth-e2e/**/*.{js,ts}"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     }
   }
 }
