--- a/apps/capital-e2e/project.json
+++ b/apps/capital-e2e/project.json
@@ -22,11 +22,8 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/capital-e2e/**/*.{js,ts}"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     }
   },
   "implicitDependencies": ["capital"]
