--- a/package.json
+++ b/package.json
@@ -9,74 +9,73 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.0.0",
-    "@angular/cdk": "^16.1.1",
-    "@angular/common": "~16.0.0",
-    "@angular/compiler": "~16.0.0",
-    "@angular/core": "~16.0.0",
-    "@angular/forms": "~16.0.0",
-    "@angular/material": "^16.1.1",
-    "@angular/platform-browser": "~16.0.0",
-    "@angular/platform-browser-dynamic": "~16.0.0",
-    "@angular/router": "~16.0.0",
-    "@ngrx/component-store": "~16.0.0",
-    "@ngrx/effects": "~16.0.0",
-    "@ngrx/entity": "~16.0.0",
-    "@ngrx/router-store": "~16.0.0",
-    "@ngrx/store": "~16.0.0",
-    "@nx/angular": "16.3.2",
-    "angular-in-memory-web-api": "^0.16.0",
+    "@angular/animations": "17.0.8",
+    "@angular/cdk": "17.0.4",
+    "@angular/common": "17.0.8",
+    "@angular/compiler": "17.0.8",
+    "@angular/core": "17.0.8",
+    "@angular/forms": "17.0.8",
+    "@angular/material": "17.0.4",
+    "@angular/platform-browser": "17.0.8",
+    "@angular/platform-browser-dynamic": "17.0.8",
+    "@angular/router": "17.0.8",
+    "@ngrx/component-store": "17.0.1",
+    "@ngrx/effects": "17.0.1",
+    "@ngrx/entity": "17.0.1",
+    "@ngrx/router-store": "17.0.1",
+    "@ngrx/store": "17.0.1",
+    "@nx/angular": "17.2.8",
+    "angular-in-memory-web-api": "^0.17.0",
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.0.0",
-    "@angular-devkit/core": "~16.0.0",
-    "@angular-devkit/schematics": "~16.0.0",
-    "@angular-eslint/eslint-plugin": "~16.0.0",
-    "@angular-eslint/eslint-plugin-template": "~16.0.0",
-    "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "~16.0.0",
-    "@angular/language-service": "~16.0.0",
-    "@ngrx/schematics": "~16.0.0",
-    "@ngrx/store-devtools": "~16.0.0",
-    "@nx/cypress": "16.3.2",
-    "@nx/eslint-plugin": "16.3.2",
-    "@nx/express": "^16.4.0",
-    "@nx/jest": "16.4.0",
-    "@nx/js": "16.4.0",
-    "@nx/linter": "16.3.2",
-    "@nx/node": "16.4.0",
-    "@nx/web": "16.3.2",
-    "@nx/webpack": "16.4.0",
-    "@nx/workspace": "16.3.2",
-    "@schematics/angular": "~16.0.0",
+    "@angular-devkit/build-angular": "17.0.9",
+    "@angular-devkit/core": "17.0.9",
+    "@angular-devkit/schematics": "17.0.9",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.8",
+    "@angular/language-service": "17.0.8",
+    "@ngrx/schematics": "17.0.1",
+    "@ngrx/store-devtools": "17.0.1",
+    "@nx/cypress": "17.2.8",
+    "@nx/eslint-plugin": "17.2.8",
+    "@nx/express": "17.2.8",
+    "@nx/jest": "17.2.8",
+    "@nx/js": "17.2.8",
+    "@nx/node": "17.2.8",
+    "@nx/web": "17.2.8",
+    "@nx/webpack": "17.2.8",
+    "@nx/workspace": "17.2.8",
+    "@schematics/angular": "17.0.9",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "~18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
+    "cypress": "^13.0.0",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "2.15.1",
     "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~13.1.0",
-    "nx": "16.3.2",
-    "nx-cloud": "latest",
+    "jest-preset-angular": "13.1.5",
+    "nx": "17.2.8",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.0.2"
+    "typescript": "5.2.2",
+    "@nx/eslint": "17.2.8"
   }
 }
