--- a/package.json
+++ b/package.json
@@ -9,73 +9,73 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.0.8",
-    "@angular/cdk": "17.0.4",
-    "@angular/common": "17.0.8",
-    "@angular/compiler": "17.0.8",
-    "@angular/core": "17.0.8",
-    "@angular/forms": "17.0.8",
-    "@angular/material": "17.0.4",
-    "@angular/platform-browser": "17.0.8",
-    "@angular/platform-browser-dynamic": "17.0.8",
-    "@angular/router": "17.0.8",
+    "@angular/animations": "18.0.0",
+    "@angular/cdk": "18.0.0",
+    "@angular/common": "18.0.0",
+    "@angular/compiler": "18.0.0",
+    "@angular/core": "18.0.0",
+    "@angular/forms": "18.0.0",
+    "@angular/material": "18.0.0",
+    "@angular/platform-browser": "18.0.0",
+    "@angular/platform-browser-dynamic": "18.0.0",
+    "@angular/router": "18.0.0",
     "@ngrx/component-store": "17.0.1",
     "@ngrx/effects": "17.0.1",
     "@ngrx/entity": "17.0.1",
     "@ngrx/router-store": "17.0.1",
     "@ngrx/store": "17.0.1",
-    "@nx/angular": "17.2.8",
-    "angular-in-memory-web-api": "^0.17.0",
-    "axios": "^1.0.0",
+    "@nx/angular": "19.1.0",
+    "angular-in-memory-web-api": "^0.18.0",
+    "axios": "1.7.2",
     "body-parser": "^1.20.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "0.14.3"
+    "zone.js": "0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.9",
-    "@angular-devkit/core": "17.0.9",
-    "@angular-devkit/schematics": "17.0.9",
-    "@angular-eslint/eslint-plugin": "17.0.1",
-    "@angular-eslint/eslint-plugin-template": "17.0.1",
-    "@angular-eslint/template-parser": "17.0.1",
-    "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "17.0.8",
-    "@angular/language-service": "17.0.8",
-    "@ngrx/schematics": "17.0.1",
-    "@ngrx/store-devtools": "17.0.1",
-    "@nx/cypress": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/express": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/node": "17.2.8",
-    "@nx/web": "17.2.8",
-    "@nx/webpack": "17.2.8",
-    "@nx/workspace": "17.2.8",
-    "@schematics/angular": "17.0.9",
+    "@angular-devkit/build-angular": "18.0.1",
+    "@angular-devkit/core": "18.0.1",
+    "@angular-devkit/schematics": "18.0.1",
+    "@angular-eslint/eslint-plugin": "17.5.1",
+    "@angular-eslint/eslint-plugin-template": "17.5.1",
+    "@angular-eslint/template-parser": "17.5.1",
+    "@angular/cli": "18.0.1",
+    "@angular/compiler-cli": "18.0.0",
+    "@angular/language-service": "18.0.0",
+    "@ngrx/schematics": "17.2.0",
+    "@ngrx/store-devtools": "17.2.0",
+    "@nx/cypress": "19.1.0",
+    "@nx/eslint-plugin": "19.1.0",
+    "@nx/express": "19.1.0",
+    "@nx/jest": "19.1.0",
+    "@nx/js": "19.1.0",
+    "@nx/node": "19.1.0",
+    "@nx/web": "19.1.0",
+    "@nx/webpack": "19.1.0",
+    "@nx/workspace": "19.1.0",
+    "@schematics/angular": "18.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "6.18.1",
-    "@typescript-eslint/parser": "6.18.1",
-    "cypress": "^13.0.0",
-    "eslint": "8.48.0",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
+    "cypress": "13.9.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "13.1.5",
-    "nx": "17.2.8",
+    "jest-preset-angular": "14.1.0",
+    "nx": "19.1.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "@nx/eslint": "17.2.8"
+    "typescript": "5.4.5",
+    "@nx/eslint": "19.1.0"
   }
 }
