--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,9 @@
   "printWidth": 160,
   "tabWidth": 2,
   "useTabs": false,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "semi": true,
+  "trailingComma": "es5",
+  "htmlWhitespaceSensitivity": "css",
+  "proseWrap": "preserve"
 }
