--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@nx/js": "19.1.0",
     "@nx/next": "^19.1.0",
     "@nx/node": "19.1.0",
+    "@nx/vite": "^19.1.0",
     "@nx/web": "19.1.0",
     "@nx/webpack": "19.1.0",
     "@nx/workspace": "19.1.0",
@@ -67,6 +68,7 @@
     "@types/node": "20.12.12",
     "@typescript-eslint/eslint-plugin": "7.10.0",
     "@typescript-eslint/parser": "7.10.0",
+    "@vitest/ui": "^1.3.1",
     "cypress": "13.10.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "9.1.0",
@@ -80,6 +82,8 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.3",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vite": "~5.0.0",
+    "vitest": "^1.3.1"
   }
 }
