--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@ngrx/entity": "17.2.0",
     "@ngrx/router-store": "17.2.0",
     "@ngrx/store": "17.2.0",
-    "@nx/angular": "19.1.0",
     "angular-in-memory-web-api": "^0.17.0",
     "axios": "1.7.2",
     "body-parser": "^1.20.2",
@@ -49,6 +48,7 @@
     "@angular/language-service": "^17.3.8",
     "@ngrx/schematics": "17.2.0",
     "@ngrx/store-devtools": "17.2.0",
+    "@nx/angular": "^19.1.0",
     "@nx/cypress": "19.1.0",
     "@nx/eslint": "19.1.0",
     "@nx/eslint-plugin": "19.1.0",
