--- a/package.json
+++ b/package.json
@@ -57,10 +57,13 @@
     "@nx/js": "19.1.0",
     "@nx/next": "^19.1.0",
     "@nx/node": "19.1.0",
+    "@nx/nuxt": "^19.1.0",
+    "@nx/playwright": "^19.1.0",
     "@nx/vite": "^19.1.0",
     "@nx/web": "19.1.0",
     "@nx/webpack": "19.1.0",
     "@nx/workspace": "19.1.0",
+    "@playwright/test": "^1.36.0",
     "@schematics/angular": "^17.3.8",
     "@types/express": "4.17.21",
     "@types/jest": "^29.5.12",
@@ -78,6 +81,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.1.0",
+    "nuxt": "^3.10.0",
     "nx": "19.1.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.3",
