--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@ngrx/store-devtools": "17.2.0",
     "@nx/angular": "^19.1.0",
     "@nx/cypress": "19.1.0",
+    "@nx/devkit": "19.1.0",
     "@nx/eslint": "19.1.0",
     "@nx/eslint-plugin": "19.1.0",
     "@nx/express": "19.1.0",
@@ -65,29 +66,46 @@
     "@nx/workspace": "19.1.0",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "^17.3.8",
+    "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@testing-library/react": "15.0.6",
     "@types/express": "4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.12.12",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.10.0",
     "@typescript-eslint/parser": "7.10.0",
-    "@vitest/ui": "^1.3.1",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "babel-jest": "^29.4.1",
     "cypress": "13.10.0",
     "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "3.2.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-playwright": "^0.15.3",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jasmine-marbles": "~0.9.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.1.0",
+    "jsdom": "~22.1.0",
     "nuxt": "^3.10.0",
     "nx": "19.1.0",
     "prettier": "^2.6.2",
+    "sass": "1.62.1",
     "ts-jest": "^29.1.3",
     "ts-node": "10.9.2",
     "typescript": "5.4.5",
-    "vite": "~5.0.0",
-    "vitest": "^1.3.1"
+    "vite": "~5.2.11",
+    "vitest": "^1.6.0"
   }
 }
