Remove Vite from Next app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
   "prettier.singleQuote": true,
   "prettier.useEditorConfig": true,
   "prettier.useTabs": false,
-  "prettier.tabWidth": 2
+  "prettier.tabWidth": 2,
+  "cSpell.words": ["nuxt"]
 }
