--- a/apps/capital-next/.swcrc
+++ b/apps/capital-next/.swcrc
@@ -18,13 +18,5 @@
     "type": "commonjs"
   },
   "sourceMaps": true,
-  "exclude": [
-    "jest.config.ts",
-    ".*\\.spec.tsx?$",
-    ".*\\.test.tsx?$",
-    "./src/jest-setup.ts$",
-    "./**/jest-setup.ts$",
-    ".*.js$",
-    ".*.d.ts$"
-  ]
+  "exclude": ["jest.config.ts", ".*\\.spec.tsx?$", ".*\\.test.tsx?$", "./src/jest-setup.ts$", "./**/jest-setup.ts$", ".*.js$", ".*.d.ts$"]
 }
