--- a/apps/capital-next/tsconfig.server.json
+++ b/apps/capital-next/tsconfig.server.json
@@ -4,12 +4,8 @@
     "module": "commonjs",
     "noEmit": false,
     "incremental": true,
-    
-    "types": [
-      "node"
-    ]
+
+    "types": ["node"]
   },
-  "include": [
-    "server/**/*.ts"
-  ]
+  "include": ["server/**/*.ts"]
 }
