--- a/apps/capital-next/tsconfig.spec.json
+++ b/apps/capital-next/tsconfig.spec.json
@@ -2,11 +2,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["vitest/globals", "vitest/importMeta", "vite/client", "node", "vitest"]
+    "module": "commonjs",
+    "types": ["jest", "node"],
+    "jsx": "react"
   },
   "include": [
-    "vite.config.ts",
-    "vitest.config.ts",
+    "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.tsx",
