--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@nx/node": "19.1.0",
     "@nx/nuxt": "^19.1.0",
     "@nx/playwright": "^19.1.0",
-    "@nx/vite": "^19.1.0",
     "@nx/web": "19.1.0",
     "@nx/webpack": "19.1.0",
     "@nx/workspace": "19.1.0",
@@ -79,8 +78,6 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.10.0",
     "@typescript-eslint/parser": "7.10.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
     "babel-jest": "^29.4.1",
     "cypress": "13.10.0",
     "eslint": "^8.0.0",
@@ -104,8 +101,6 @@
     "sass": "1.62.1",
     "ts-jest": "^29.1.3",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5",
-    "vite": "~5.2.11",
-    "vitest": "^1.6.0"
+    "typescript": "5.4.5"
   }
 }
