--- a/apps/capital-next-e2e/project.json
+++ b/apps/capital-next-e2e/project.json
@@ -2,7 +2,8 @@
   "name": "capital-next-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/capital-next-e2e/src",
-  "tags": [],
+  "projectType": "application",
+  "tags": ["scope:capital-next", "type:e2e"],
   "implicitDependencies": ["capital-next"],
   "// targets": "to see all targets run: nx show project capital-next-e2e --web",
   "targets": {}
