--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -32,7 +32,7 @@ jobs:
   merge:
     needs: [metadata, build]
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'owner/my_repo'
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'mppanayotov/angular-capital'
     steps:
       - name: Dependabot metadata
         id: dependabot-metadata
