--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -8,6 +8,7 @@ jobs:
     permissions:
       pull-requests: read
     runs-on: ubuntu-latest
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'mppanayotov/angular-capital'
     steps:
     - name: Fetch Dependabot metadata
       id: dependabot-metadata
