--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -8,7 +8,7 @@ jobs:
     permissions:
       pull-requests: read
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'mppanayotov/angular-capital'
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
     - name: Fetch Dependabot metadata
       id: dependabot-metadata
@@ -33,7 +33,7 @@ jobs:
   merge:
     needs: [metadata, build]
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'mppanayotov/angular-capital'
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
       - name: Dependabot metadata
         id: dependabot-metadata
