--- a/package.json
+++ b/package.json
@@ -9,98 +9,98 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.10",
-    "@angular/cdk": "^17.3.10",
-    "@angular/common": "^17.3.10",
-    "@angular/compiler": "^17.3.10",
-    "@angular/core": "^17.3.10",
-    "@angular/forms": "^17.3.10",
-    "@angular/material": "^17.3.10",
-    "@angular/platform-browser": "^17.3.10",
-    "@angular/platform-browser-dynamic": "^17.3.10",
-    "@angular/router": "^17.3.10",
-    "@ngrx/component-store": "17.2.0",
-    "@ngrx/effects": "17.2.0",
-    "@ngrx/entity": "17.2.0",
-    "@ngrx/router-store": "17.2.0",
-    "@ngrx/store": "17.2.0",
-    "angular-in-memory-web-api": "^0.17.0",
+    "@angular/animations": "^18.2.3",
+    "@angular/cdk": "^18.2.3",
+    "@angular/common": "^18.2.3",
+    "@angular/compiler": "^18.2.3",
+    "@angular/core": "^18.2.3",
+    "@angular/forms": "^18.2.3",
+    "@angular/material": "^18.2.3",
+    "@angular/platform-browser": "^18.2.3",
+    "@angular/platform-browser-dynamic": "^18.2.3",
+    "@angular/router": "^18.2.3",
+    "@ngrx/component-store": "18.0.2",
+    "@ngrx/effects": "18.0.2",
+    "@ngrx/entity": "18.0.2",
+    "@ngrx/router-store": "18.0.2",
+    "@ngrx/store": "18.0.2",
+    "angular-in-memory-web-api": "^0.18.0",
     "axios": "1.7.7",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.7",
+    "next": "14.2.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.7.0",
-    "zone.js": "0.14.10"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular-devkit/core": "^18.2.2",
-    "@angular-devkit/schematics": "^18.2.2",
-    "@angular-eslint/eslint-plugin": "17.5.1",
-    "@angular-eslint/eslint-plugin-template": "17.5.1",
+    "@angular-devkit/build-angular": "^18.2.3",
+    "@angular-devkit/core": "^18.2.3",
+    "@angular-devkit/schematics": "^18.2.3",
+    "@angular-eslint/eslint-plugin": "18.3.0",
+    "@angular-eslint/eslint-plugin-template": "18.3.0",
     "@angular-eslint/template-parser": "18.3.0",
-    "@angular/cli": "^18.2.2",
-    "@angular/compiler-cli": "^17.3.8",
-    "@angular/language-service": "^18.2.2",
-    "@ngrx/schematics": "17.2.0",
-    "@ngrx/store-devtools": "17.2.0",
-    "@nx/angular": "^19.1.0",
-    "@nx/cypress": "19.1.0",
-    "@nx/devkit": "19.6.4",
-    "@nx/eslint": "19.1.0",
-    "@nx/eslint-plugin": "19.6.4",
-    "@nx/express": "19.6.4",
-    "@nx/jest": "19.6.4",
-    "@nx/js": "19.6.4",
-    "@nx/next": "^19.1.0",
-    "@nx/node": "19.1.0",
-    "@nx/nuxt": "^19.1.0",
-    "@nx/playwright": "^19.6.4",
-    "@nx/web": "19.1.0",
-    "@nx/webpack": "19.1.0",
-    "@nx/workspace": "19.1.0",
-    "@playwright/test": "^1.36.0",
-    "@schematics/angular": "^18.2.2",
-    "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.3.12",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
+    "@angular/cli": "^18.2.3",
+    "@angular/compiler-cli": "^18.2.3",
+    "@angular/language-service": "^18.2.3",
+    "@ngrx/schematics": "18.0.2",
+    "@ngrx/store-devtools": "18.0.2",
+    "@nx/angular": "19.6.5",
+    "@nx/cypress": "19.6.5",
+    "@nx/devkit": "19.6.5",
+    "@nx/eslint": "19.6.5",
+    "@nx/eslint-plugin": "19.6.5",
+    "@nx/express": "19.6.5",
+    "@nx/jest": "19.6.5",
+    "@nx/js": "19.6.5",
+    "@nx/next": "19.6.5",
+    "@nx/node": "19.6.5",
+    "@nx/nuxt": "19.6.5",
+    "@nx/playwright": "19.6.5",
+    "@nx/web": "19.6.5",
+    "@nx/webpack": "19.6.5",
+    "@nx/workspace": "19.6.5",
+    "@playwright/test": "^1.47.0",
+    "@schematics/angular": "^18.2.3",
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "~0.4.0",
+    "@swc/core": "1.7.24",
+    "@swc/helpers": "0.5.13",
     "@testing-library/react": "16.0.1",
     "@types/express": "4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "22.5.2",
+    "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.10.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "babel-jest": "^29.4.1",
-    "cypress": "13.10.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "babel-jest": "29.7.0",
+    "cypress": "13.14.2",
     "eslint": "^8.0.0",
-    "eslint-config-next": "14.2.7",
+    "eslint-config-next": "14.2.8",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-cypress": "3.2.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-cypress": "3.5.0",
+    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-jsx-a11y": "6.10.0",
     "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react": "7.35.2",
     "eslint-plugin-react-hooks": "4.6.2",
     "jasmine-marbles": "~0.9.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.2.2",
     "jsdom": "~25.0.0",
-    "nuxt": "^3.10.0",
-    "nx": "19.1.0",
+    "nuxt": "^3.13.1",
+    "nx": "19.6.5",
     "prettier": "^3.3.3",
-    "sass": "1.62.1",
+    "sass": "1.78.0",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5"
+    "typescript": "5.5.4"
   }
 }
