--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.8",
+    "next": "^14.2.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "rxjs": "~7.8.1",
@@ -78,6 +78,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "@typescript-eslint/utils": "^7.16.0",
     "babel-jest": "29.7.0",
     "cypress": "13.14.2",
     "eslint": "^8.0.0",
