--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci
-      - run: npm run build --skip-nx-cache
+      - run: nx run-many -t build --parallel=3 --skip-nx-cache
   merge:
     needs: [metadata, build]
     runs-on: ubuntu-latest
